fix faq sidebar overlap

--- a/public/css/sass/_faq.sass
+++ b/public/css/sass/_faq.sass
@@ -73,6 +73,9 @@
     margin-top: 20px
     .faq-side-bar
         padding: 0 !important
+        &.fixed-height
+            max-height: 450px
+            overflow-y: auto
     .faq-side-header
         +border-radius(2px 2px 0 0)
         background-color: #2F5247
